fixed overflow

--- a/src/style.pcss
+++ b/src/style.pcss
@@ -60,7 +60,7 @@
 
 :host {
     display: block;
-    overflow:scroll;
+    overflow: auto;
     padding: 10px 0;
     
     font-family: var(--code-font);
@@ -106,7 +106,7 @@
 
 #code{
     z-index: 1;
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
 pre, code{
